[project]
name = "OpenDahua"
version = "1.0.1"
description = "SDK for interacting with Dahua NVRs over their peer-to-peer protocol."
authors = [
    { name = "Tijn Heijboer", email = "tijnheijboer@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "cryptography>=48.0.0",
    "xmltodict>=1.0.4",
]

[dependency-groups]
dev = [
    "pytest==9.0.3"
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.11.17,<0.12"]
build-backend = "uv_build"
